updated config page

--- a/_config.yml
+++ b/_config.yml
@@ -18,11 +18,11 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Blog Title 
-email: author_email@email.com 
+title: JD's Stat 386 
+email: jdgard33@byu.edu 
 description: "Change the description so that it describes your blog" 
-baseurl: "/stat386-blog-theme" # the name of the repository 
-url: "https://esnt.github.io" #  change this to "https://<your-github-username>.github.io"
+baseurl: "my-blog" # the name of the repository 
+url: "https://jdgard38.github.io" #  change this to "https://<your-github-username>.github.io"
 image: /assets/images/headerimg.jpg
 author: Your name
 copyright: ABCD # Your initials or name or what you want the copyright to be.  Leave empty for no copyright
